--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -21,7 +21,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto+Slab&display=swap"
+      rel="stylesheet"
+    />
     <title>Context flow</title>
   </head>
   <body>
